Fix opacity transition issue: button z-index

--- a/sass/site/artist/_artist.scss
+++ b/sass/site/artist/_artist.scss
@@ -236,6 +236,7 @@ table.availability {
 	padding: 12px;
 	color: #FFF;
 	background-color: #000;
+	z-index: 10;
 	@include font-size(1.125);
 	@include transition(all 0.3s ease-in-out);
 }
