--- a/style.css
+++ b/style.css
@@ -2041,6 +2041,7 @@ table.availability td.availability-special {
   padding: 12px;
   color: #FFF;
   background-color: #000;
+  z-index: 10;
   font-size: 18px;
   font-size: 1.125rem;
   -webkit-transition: all 0.3s ease-in-out;
